--- a/.eslintrc
+++ b/.eslintrc
@@ -14,29 +14,30 @@
   "plugins": ["import"],
   "extends": "eslint-config-es6",
   "rules": {
-    "semi": [2, "never"],
-    "quotes": [2, "single"],
-    "no-return-assign": 0,
-    "no-use-before-define": 0,
-    "global-require": 0,
-    "indent": ["error", 2],
-    "import/no-extraneous-dependencies": 0,
-    "consistent-return": 0,
-    "no-prototype-builtins": 0,
-    "curly": 0,
-    "no-restricted-syntax": 0,
-    "guard-for-in": 0,
     "arrow-parens": 0,
-    "no-shadow": 0,
-    "lines-around-directive": 0,
-    "spaced-comment": 0,
-    "no-param-reassign": 0,
-    "eqeqeq": 0,
     "class-methods-use-this": 0,
-    "no-mixed-operators": 0,
-    "space-infix-ops": 0,
+    "consistent-return": 0,
+    "curly": 0,
+    "eqeqeq": 0,
+    "indent": ["error", 2],
+    "guard-for-in": 0,
+    "global-require": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/newline-after-import":0,
+    "lines-around-directive": 0,
     "no-console": 0,
+    "no-mixed-operators": 0,
+    "no-param-reassign": 0,
+    "no-prototype-builtins": 0,
+    "no-restricted-syntax": 0,
+    "no-return-assign": 0,
+    "no-shadow": 0,
+    "no-use-before-define": 0,
+    "one-var":0,
     "prefer-rest-params": 0,
-    "one-var":0
+    "quotes": [2, "single"],
+    "semi": [2, "never"],
+    "spaced-comment": 0,
+    "space-infix-ops": 0
   }
 }
